<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputPayInfoActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="320dp"
        android:layout_height="610dp"
        android:background="@drawable/layout_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/참석인원선택제목"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/attendeeCbLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:flexWrap="wrap">


                </com.google.android.flexbox.FlexboxLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/결제인원선택제목"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/payerCbLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:flexWrap="wrap">


                </com.google.android.flexbox.FlexboxLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/결제날짜입력제목"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="318dp"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="1dp">

                    <ImageView
                        android:id="@+id/calendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:contentDescription="@string/달력이미지"
                        android:src="@drawable/ic_calendar"
                        app:layout_constraintStart_toEndOf="@+id/dateText"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/dateText"
                        android:layout_width="114dp"
                        android:layout_height="49dp"
                        android:layout_marginStart="68dp"
                        android:enabled="false"
                        android:hint="@string/날짜형식"
                        android:importantForAutofill="no"
                        android:inputType="date"
                        android:textColor="#000000"
                        android:textColorHint="#96000000"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/결제내역종류입력제목"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/payKind"
                    android:layout_width="219dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="48dp"
                    android:hint="@string/결제내역종류예시"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColor="#000000"
                    android:textColorHint="#96000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/결제금액입력제목"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/price"
                    android:layout_width="219dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="48dp"
                    android:hint="@string/결제금액예시"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:textColor="#000000"
                    android:textColorHint="#96000000" />

            </LinearLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/camera"
            android:layout_width="66dp"
            android:layout_height="47dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/달력이미지"
            android:src="@drawable/ic_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancelMem" />

        <Button
            android:id="@+id/confirmMem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/border_rect_btn"
            android:text="@string/확인"
            android:textColor="#000000"
            android:textSize="18sp"
            app:backgroundTint="#00FFFFFF"
            app:iconTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/cancelMem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/border_rect_btn"
            android:text="@string/취소"
            android:textColor="#000000"
            android:textSize="18sp"
            app:backgroundTint="#00000000"
            app:iconTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/confirmMem" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>