<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="-54dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:background="#EB1261DA"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/nav_button"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:title="더치Go"
                app:titleTextColor="#FFFFFF" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout1"
                android:layout_width="362dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="76dp"
                android:background="@drawable/border_mainbox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="#EB1261DA"
                    android:gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:text="@string/멤버"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/addMem"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/border_round_btn"
                    android:gravity="center"
                    android:text="@string/plus"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@+id/delMem"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/delMem"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/border_round_btn"
                    android:gravity="center"
                    android:text="@string/minus"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView1"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="60dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView1">

                    <TextView
                        android:id="@+id/memText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        tools:layout_editor_absoluteX="24dp"
                        tools:layout_editor_absoluteY="68dp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/payHistory"
                android:layout_width="362dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/border_mainbox"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="362dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="364dp"
                        android:layout_height="57dp"
                        android:background="#EB1261DA"
                        android:gravity="center_vertical"
                        android:paddingStart="15dp"
                        android:paddingEnd="0dp"
                        android:text="@string/지출내역"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/addHistory"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/border_round_btn"
                        android:gravity="center"
                        android:text="@string/plus"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/payHistoryBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:tag="payHistoryExplain"
                        android:text="@string/결제내역추가설명"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="362dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/border_mainbox"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/payHistory">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="#EB1261DA"
                    android:gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:text="@string/정산내역"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="60dp"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="14sp">

                    <TextView
                        android:id="@+id/settlementInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/settlement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/groupName"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


    </LinearLayout>
    <Button
        android:id="@+id/reset"
        android:layout_width="86dp"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/border_rect_btn"
        android:text="@string/초기화"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="#00FFFFFF"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/addGroup"
        android:layout_width="86dp"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/border_rect_btn"
        android:text="@string/그룹추가"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="#00FFFFFF"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
